--- a/sudoku/README
+++ b/sudoku/README
@@ -1,1 +1,1 @@
-THIS IS A SUDOKU GAME FOR WINDOWS WITH THE ABILITY TO SAVE AND OPEN PREVIOUSLY SAVED GAME SESSIONS
+THIS IS A SUDOKU GAME FOR WINDOWS WITH THE ABILITY TO SAVE AND OPEN GAME SESSIONS
